# mupp

./: .gitignore  CMakeLists.txt  README.md  asset.cc  asset.h  asset_dump.cc  asset_packer.cc  bmd.cc  bmd.h  cleanup.h  client.cc  error.cc  error.h  file.cc  file.h  gl.cc  gl.h  glad.c  glad.h  image_viewer.cc  khrplatform.h  logging.cc  logging.h  macro.h  math.h  model_viewer.cc  null_stream.h  renderable.cc  renderable.h  serialization.cc  serialization.h  shader.cc  shader.h  stb_image.h  string.h  struct.h  texture.cc  texture.h  ticker.h  transformation.cc  (+1 more)
